fix footer spacing

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -15,28 +15,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-grow: 1;
   flex-direction: column;
   text-align: left;
-  align-items: flex-end;
   max-width: 250px;
 }
 
 .footer {
   display: flex;
-  flex: 1;
   padding: 2rem 0;
   border-top: 1px solid #eaeaea;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   line-height: 0;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
 }
 
 .title a {
